# Renderer3D-Rust

./: .gitignore  Cargo.toml  Packager.toml  README.md  REQUIREMENTS.md  build.rs
.github/workflows/: ci.yml  release.yml
docs/: GEOMETRY_IMPORT.md  I18N.md  ML_VISUALIZER.md  PACKAGING.md  POLYGON_COMPOSER.md
locales/: app.yml  dataset.yml  geometry.yml  llm.yml  sketch.yml  stream.yml
logs/: 20260130_log.txt
packaging/linux/: rendering-3d.desktop  tech.fratarcangeli.rendering3d.metainfo.xml
packaging/macos/: build-pkg.sh  distribution.xml
packaging/macos/resources/de.lproj/: conclusion.html  license.html  readme.html  welcome.html
packaging/macos/resources/en.lproj/: conclusion.html  license.html  readme.html  welcome.html
packaging/macos/resources/es.lproj/: conclusion.html  license.html  readme.html  welcome.html
packaging/macos/resources/fr.lproj/: conclusion.html  license.html  readme.html  welcome.html
packaging/macos/resources/it.lproj/: conclusion.html  license.html  readme.html  welcome.html
packaging/windows/: installer.nsi
packaging/windows/strings/: English.nsh  French.nsh  German.nsh  Italian.nsh  Spanish.nsh
scripts/: build-installer.ps1  gen-icons.sh  gen-latest-json.py  gen-update-key.sh  release.ps1
src/: camera.rs  i18n.rs  lib.rs  logger.rs  main.rs  mesh.rs  model.rs  primitives.rs  render.rs  scene.rs  settings.rs  shader.wgsl  state.rs  updater.rs  util.rs
src/brep/: mod.rs  solid.rs  to_mesh.rs  validate.rs  weld.rs
src/dataset/: builtin.rs  export.rs  index.rs  loader.rs  metadata.rs  mod.rs  preprocessor.rs
src/dataset/stream/: arrow.rs  mod.rs  ndjson.rs
src/geometry/: json.rs  loader.rs  mod.rs  parser.rs  table.rs
src/llm/: activation.rs  arch.rs  catalog.rs  exporter.rs  loader.rs  mod.rs  network.rs  ollama.rs  tokenizer.rs
src/sketch/: mod.rs  profile.rs  segment.rs  tessellate.rs
src/ui/: dataset_table.rs  distribution_chart.rs  export_panel.rs  geometry_panel.rs  import_dialog.rs  label_filter.rs  llm_panel.rs  mod.rs  search_panel.rs  sketch_panel.rs  stream_panel.rs
src/visualization/: color_mapper.rs  geometry_assigner.rs  mod.rs  point_cloud.rs
tests/: feat_tests.rs  import_tests.rs  sketch_compose_tests.rs  test_manager.py
tests/camera/: defaults.rs  main.rs
tests/dataset/: bench.rs  export_tests.rs  helpers.rs  index_tests.rs  loader_tests.rs  main.rs  metadata_tests.rs  preprocessor_tests.rs  smoke.rs
tests/geometry/: default_cases.rs  extreme_cases.rs  main.rs
tests/geometry_import/: main.rs
tests/import/: build-tray-step.stp  build-tray-stl.stl  lego_heart_keychain.stl  seed-starter-base.stl
tests/scene/: defaults.rs  logic_tests.rs  main.rs  picking.rs  properties.rs  undo_redo.rs
tests/stream/: arrow_streamer.py  helpers.rs  main.rs  ndjson_streamer.py  python_streamers.rs  rust_producer.rs
tests/ui/: dataset_panels.rs  defaults.rs  geometry_panel_tests.rs  icon_test.rs  layout_tests.rs  main.rs  panel_helpers.rs
tests/utility/: main.rs  random_cases.rs
tests/visualization/: main.rs
