[package]
name = "rendering_3d"
version = "0.1.0"
edition = "2021"

[dependencies]
wgpu = "0.20"
winit = "0.29"
cgmath = "0.18"
pollster = "0.3"
bytemuck = { version = "1.14", features = ["derive"] }
egui = "0.28"
egui-winit = "0.28"
egui-wgpu = "0.28"
serde = { version = "1.0", features = ["derive"] }
ron = "0.8"  # Per settings JSON-like
anyhow = "1.0"
chrono = "0.4.43"
