[package]
name = "rendering_3d"
version = "0.1.0"
edition = "2021"

[dependencies]
wgpu = "0.20"
winit = "0.29"
cgmath = "0.18"
pollster = "0.3"
bytemuck = { version = "1.14", features = ["derive"] }
egui = "0.28"
egui-winit = "0.28"
egui-wgpu = "0.28"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ron = "0.8"                                            # Per settings JSON-like
anyhow = "1.0"
memmap2 = "0.9"                                        # Memory-mapped large dataset files
csv = "1.3"                                            # Streaming CSV loader
zip = { version = "2", default-features = false, features = ["deflate"] } # NPZ archives
parquet = { version = "53", optional = true }          # Optional Parquet loader
chrono = "0.4.43"
resvg = "0.47.0"
usvg = "0.47.0"
tiny-skia = "0.12.0"
image = { version = "0.25.10", features = ["ico"] }


[features]
default = []
parquet-support = ["dep:parquet"]

[dev-dependencies]
tempfile = "3"

[build-dependencies]
winres = "0.1.12"
