[package]
name = "rendering_3d"
version = "1.1.0"
edition = "2021"

[dependencies]
wgpu = "0.20"
winit = "0.29"
cgmath = "0.18"
pollster = "0.3"
bytemuck = { version = "1.14", features = ["derive"] }
egui = "0.28"
egui-winit = "0.28"
egui-wgpu = "0.28"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ron = "0.8"                                            # Per settings JSON-like
anyhow = "1.0"
memmap2 = "0.9"                                        # Memory-mapped large dataset files
csv = "1.3"                                            # Streaming CSV loader
zip = { version = "2", default-features = false, features = ["deflate"] } # NPZ archives
parquet = { version = "53", optional = true }          # Optional Parquet loader
calamine = "0.26"                                      # Excel (xlsx/xls/ods) geometry tables
stl_io = "0.3"                                         # STL solid model import
tobj = "4.0"                                           # Wavefront OBJ import
gltf = "1.4"                                           # glTF / GLB import
chrono = "0.4.43"
rust-i18n = "3"                                       # Compile-time embedded UI translations
sys-locale = "0.3"                                    # Detect the OS UI language at startup
dirs = "5"                                            # Per-user config dir for the language choice
cargo-packager-updater = "0.2"                        # Signed in-place auto-update (rustls)
resvg = "0.47.0"
usvg = "0.47.0"
tiny-skia = "0.12.0"
image = { version = "0.25.10", features = ["ico"] }


[features]
default = []
parquet-support = ["dep:parquet"]

[dev-dependencies]
tempfile = "3"
# Headless egui for UI integration tests (same version as the main dep).
egui = "0.28"
# Writes real .xlsx fixtures for the Excel geometry-import tests.
rust_xlsxwriter = "0.79"

[build-dependencies]
winres = "0.1.12"
